--- a/MSSQL server/1. Install for mac.md
+++ b/MSSQL server/1. Install for mac.md
@@ -40,3 +40,8 @@ docker exec -it {mssql-server} "bash
 - authentication type : SQL login
 - User name : sa
 - password : 2번에서 설정한 {your password}
+
+## reference
+
+- https://oingdaddy.tistory.com/285
+- https://ddolcat.tistory.com/2370
