chore: spaces 수정

--- a/JavaScript/Deep Dive/26장_ES6_함수추가기능.md
+++ b/JavaScript/Deep Dive/26장_ES6_함수추가기능.md
@@ -32,21 +32,21 @@ obj.foo()
 
 - ES6 사양에서 메서드는 메서드 축약 표현으로 정의된 함수만을 의미한다.
 
-  ```tsx
-  const obj = {
-    x: 1,
+```tsx
+const obj = {
+  x: 1,
 
-    // 메서드
-    foo() {
-      return this.x
-    },
+  // 메서드
+  foo() {
+    return this.x
+  },
 
-    // 일반 함수
-    bar: function () {
-      return this.x
-    }
+  // 일반 함수
+  bar: function () {
+    return this.x
   }
-  ```
+}
+```
 
 - ES6 사양에서 정의한 메서드는 인스턴스를 생성할 수 없는 non-constructor다.
   - ES6 메서드는 생성자 함수로서 호출할 수 없다.
@@ -92,20 +92,20 @@ obj.foo()
 
   - 내부 슬롯 `[[HomeObject]]`를 갖지 않기 때문이다.
 
-    ```tsx
-    const derived = {
-      __proto__: base,
+  ```tsx
+  const derived = {
+    __proto__: base,
 
-      // 💛
-      sayHi: function () {
-        return `${super.sayHi()}. how are you doing?`
-      }
+    // 💛
+    sayHi: function () {
+      return `${super.sayHi()}. how are you doing?`
     }
-    ```
+  }
+  ```
 
-    💛 `sayHi`는 ES6 메서드가 아니다.  
-    💛 `sayHi`는 `[[HomeObject]]`를 갖지 않으므로 `super` 키워드를 사용할 수 없다.  
-     SyntaxError: ‘super’ keyword unexpected here
+  💛 `sayHi`는 ES6 메서드가 아니다.  
+  💛 `sayHi`는 `[[HomeObject]]`를 갖지 않으므로 `super` 키워드를 사용할 수 없다.  
+   SyntaxError: ‘super’ keyword unexpected here
 
 ## 26.3 화살표 함수
 
@@ -152,9 +152,9 @@ obj.foo()
   // 3️⃣ 즉시 실행 함수로 사용
   const person = (name => ({
     sayHi() {
-      return `Hi? My name is ${name}.`
-    }
-  }))('Ahn')
+    return `Hi? My name is ${name}.`
+  }
+  ))('Ahn')
 
   console.log(person.sayHi())   // Hi? My name is Ahn.
   ```
@@ -164,7 +164,7 @@ obj.foo()
 ### 26.3.2 화살표 함수와 일반 함수의 차이
 
 1. 화살표 함수는 인스턴스를 생성할 수 없는 non-constructor다.
-   - 인스턴스를 생성할 수 없으므로 prototype 프로퍼티가 없고 프로토타입도 생성하지 않는다.
+   - 인스턴스를 생성할 수 없으므로 porottype 프로퍼티가 없고 프로토타입도 생성하지 않는다.
 2. 중복된 매개변수 이름을 선언할 수 없다.
    - 일반 함수는 중복된 매개변수 이름을 선언해도 에러가 발생하지 않는다.
    - 단, strict mode에서 중복된 매개변수 이름을 선언하면 에러가 발생한다.
@@ -278,7 +278,7 @@ obj.foo()
     increase: () => ++this.num
   }
 
-  console.log(counter.increase()) // NaN
+  console.log(conuter.increase()) // NaN
   ```
 
 - 화살표 함수는 함수 자체의 `this` 바인딩을 갖지 않기 때문에 `call`, `apply`, `bind` 메서드를 사용해도 화살표 함수 내부의 `this`를 교체할 수 없다.
@@ -323,14 +323,11 @@ obj.foo()
   ```
 
   - 전역 객체 `window`에는 빌트인 프로퍼티 `name`이 존재한다.  
-    <img width="398" alt="image" src="https://user-images.githubusercontent.com/88878874/258880138-02e08bb3-6cad-4d35-a244-9bb1ba4fb928.png">
-
+    <img width="398" alt="image" src="https://user-images.githubusercontent.com/88878874/258880138-02e08bb3-6cad-4d35-a244-9bb1ba4fb928.png">  
     🤔 상위 스코프면 `person` 아니야?  
-    → 단순하게 화살표 함수의 “상위”라고만 하면 `person` 객체라고 생각했다. 항상 헷갈렸던 부분이라 좀 찾아봤다. 객체는 스코프, 컨텍스트가 생성되지 않는다. 그러므로 상위 컨텍스트, 상위 스코프의 this를 참조하는 화살표 함수의 `this`는 전역 객체인 것이다.
-
+    → 단순하게 화살표 함수의 “상위”라고만 하면 `person` 객체라고 생각했다. 항상 헷갈렸던 부분이라 좀 찾아봤다. 객체는 스코프, 컨텍스트가 생성되지 않는다. 그러므로 상위 컨텍스트, 상위 스코프의 this를 참조하는 화살표 함수의 `this`는 전역 객체인 것이다.  
     🤔 객체도 스코프가 존재하지 않나..?  
-    객체의 스코프 또한 존재한다고 생각했는데 정확하게 “스코프”가 생성되는 것은 아니고 “그룹화”되는 것이라고 한다. 객체 내부에서 선언된 변수는 객체 외부에서 접근할 수 없다. 그래서 스코프가 생성된다고 생각했었다. “직접” 접근할 수는 없지만 `.`, `[]` 표기법을 사용하여 접근할 수 있다. 복습하자면 스코프는 **함수가 호출**될 때 생성된다.
-
+    객체의 스코프 또한 존재한다고 생각했는데 정확하게 “스코프”가 생성되는 것은 아니고 “그룹화”되는 것이라고 한다. 객체 내부에서 선언된 변수는 객체 외부에서 접근할 수 없다. 그래서 스코프가 생성된다고 생각했었다. “직접” 접근할 수는 없지만 `.`, `[]` 표기법을 사용하여 접근할 수 있다. 복습하자면 스코프는 **함수가 호출**될 때 생성된다.  
     🤔 함수 타입은 객체인데, 객체는 스코프와 컨텍스트가 생성이 안 된다고?  
     → **모든 함수는 객체이지만, 모든 객체가 함수는 아니다.** 함수는 특별한 종류의 객체이다. 실행가능한 코드를 가지며 호출할 수 있다. 함수는 callable, 일반적인 객체는 그렇지 않다.
 
@@ -423,33 +420,32 @@ obj.foo()
       // Good
       class goodPerson {
         name = 'Ahn'
-
         sayHi() {
           console.log(`Hi ${this.name}`)
         }
       }
       ```
 
-    🤔 class는 함수가 아니고 스코프도 컨텍스트도 생성되지 않는데 왜 this가 전역이 아니지?
+      🤔 class는 함수가 아니고 스코프도 컨텍스트도 생성되지 않는데 왜 this가 전역이 아니지?
 
-    1. `this` 바인딩은 `class`의 인스턴스가 생성될 때 정해진다.
+      1. `this` 바인딩은 `class`의 인스턴스가 생성될 때 정해진다.
 
-    2. 화살표 함수의 `this` 바인딩은 호출 위치가 아닌 정의된 곳에서 정해진다.  
-       → 클래스 내부의 메서드들은 인스턴스가 생성될 때 각각의 컨텍스트를 가진다. 클래스 생성자 또한 새로운 인스턴스를 생설 할 때 스코프를 생성한다. 이 때 📍**각각의 인스턴스에 대해 화살표 함수가 정의된다.** 클래스의 필드에서 정의된 화살표 함수의 경우, **화살표 함수는 자신이 속한 인스턴스의 컨텍스트에 바인딩**된다. 그러므로 `this`가 인스턴스, `person`이 되는 것이다.
+      2. 화살표 함수의 `this` 바인딩은 호출 위치가 아닌 정의된 곳에서 정해진다.
+         → 클래스 내부의 메서드들은 인스턴스가 생성될 때 각각의 컨텍스트를 가진다. 클래스 생성자 또한 새로운 인스턴스를 생설 할 때 스코프를 생성한다. 이 때 📍**각각의 인스턴스에 대해 화살표 함수가 정의된다.** 클래스의 필드에서 정의된 화살표 함수의 경우, **화살표 함수는 자신이 속한 인스턴스의 컨텍스트에 바인딩**된다. 그러므로 `this`가 인스턴스, `person`이 되는 것이다.
 
-       ```tsx
-       // 📍
-       class MyClass {
-         myMethod = () => {
-           console.log(this)
-         }
-       }
+      ```tsx
+      // 📍
+      class MyClass {
+        myMethod = () => {
+          console.log(this)
+        }
+      }
 
-       const instance1 = new MyClass()
-       const instance2 = new MyClass()
+      const instance1 = new MyClass()
+      const instance2 = new MyClass()
 
-       instance1.myMethod === instance2.myMethod // false
-       ```
+      instance1.myMethod === instance2.myMethod // false
+      ```
 
 ### 26.3.4 super
 
